--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,12 @@
 .env
 .env.backup
 .phpunit.result.cache
+composer.lock
 docker-compose.override.yml
 Homestead.json
 Homestead.yaml
 npm-debug.log
+phpunit.dusk.xml
 yarn-error.log
 /.idea
 /.vscode
