--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "postcss-import": "^14.0.1",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.49.8",
+        "sass-loader": "^12.6.0",
         "tailwindcss": "^3.0.0"
     },
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^32.0.0",
+        "@fortawesome/fontawesome-free": "^6.0.0",
         "sweetalert2": "^11.4.4"
     }
 }
