--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "dropzone": "^6.0.0-beta.2",
         "flexslider": "^2.7.2",
         "glider-js": "^1.7.7",
+        "jquery": "^3.6.0",
         "sweetalert2": "^11.4.4"
     }
 }
