--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "flexslider": "^2.7.2",
         "glider-js": "^1.7.7",
         "jquery": "^3.6.0",
+        "nouislider": "^15.5.1",
         "sweetalert2": "^11.4.4"
     }
 }
